# test-task-ALT

./: .gitignore  CMakeLists.txt  README.md  lib.cpp  lib.hpp  main.cpp
